# qwery-hub

./: .gitignore  LICENSE  README.md  package-lock.json
apps/api/: CHANGES_SUMMARY.md  ENV_SETUP.md  README.md  pyproject.toml  requirements.txt
apps/api/src/: main.py
apps/api/src/config/: database.py  settings.py
apps/api/src/middleware/: cors.py
apps/api/src/models/: db_models.py  schemas.py
apps/api/src/routers/: chat.py  widgets.py
apps/api/src/services/: agora_service.py  llm_service.py  rag_service.py  rightnow_service.py  scheduler_service.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/integrations/fetch-sync/: route.ts
apps/web/app/api/schedule/next/: route.ts
apps/web/app/api/schedule/upcoming/: route.ts
apps/web/app/api/src/: index.ts
apps/web/app/api/src/config/: settings.ts
apps/web/app/api/src/routes/: chat.ts  widgets.ts
apps/web/app/api/src/services/: agoraService.ts  apiFetchService.ts  dataService.ts  llmService.ts  questionAnalysisService.ts  ragService.ts  rightnowService.ts  schedulerService.ts
apps/web/app/api/src/types/: index.ts
apps/web/app/components/: Avatar.tsx  WelcomeOverlay.tsx
apps/web/lib/: api.ts  nusmods.ts  rightNow.ts  time.ts
apps/web/public/: MOOD_ASSETS_README.md  next.mov
apps/web/server/integrations/: canvas.ts  nusmods.ts  sync.ts
