[tool.poetry]
name = "ai-study-buddy-api"
version = "1.0.0"
description = "RAG backend for AI Study Buddy"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
openai = "1.3.0"
sqlalchemy = "2.0.23"
pydantic = "2.5.0"
pydantic-settings = "2.5.0"
python-dotenv = "1.0.0"
httpx = "0.25.0"
python-dateutil = "2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
